manifests/applications/copyparty/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: copyparty
  name: copyparty
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3923
  selector:
    app: copyparty
status:
  loadBalancer: {}
